# assessment-api

./: .env.example  .flake8  .gitignore  CHAT_FEATURES_WALKTHROUGH.md  INTERVIEW_WALKTHROUGH.md  README.md  dealnest.db  demo.py  pyproject.toml  requirements.txt  test.db
app/: main.py
app/api/: chat.py  partner_requests.py  schemas.py  users.py
app/core/: config.py  logging.py
app/db/: database.py  models.py
app/services/: notification_service.py  presence_service.py  websocket_manager.py
static/: chat_demo.html
tests/: test_chat.py  test_partner_requests.py  test_users.py
